Fixed search bar and avatar alignment in mobile breakpoint

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -139,9 +139,13 @@
     }
 
     &__avatar-container {
-        margin: 0;
+        margin: 0 0 .3rem 0;
         width: auto;
         display: flex;
+
+        @include tablet {
+            margin-bottom: 0;
+        }
     }
     
     &__avatar {
